--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="StyleSheet" href="./style.css">
-    <script src="https://unpkg.com/vue-slick-carousel@1.0.6/dist/vue-slick-carousel.umd.js"></script>
+    <script src="https://unpkg.com/vue-slick-carousel"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
