--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="StyleSheet" href="./bootstrap/css/bootstrap.css">
     <link rel="StyleSheet" href="./fontawesome/css/fontawesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-
+    <script src="https://unpkg.com/vue-gallery-slideshow"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
